--- a/src/Css/Inicio.css
+++ b/src/Css/Inicio.css
@@ -35,27 +35,27 @@
 }
 .logoBootstrap {
   padding: 10px 10px 10px 10px;
-  width: 50%;
+  width: 14.3%;
 }
 .logoHTML{
-  width: 50%;
+  width: 14.3%;
 }
 .logoJS {
-  width: 50%;
+  width: 14.3%;
 }
 .logoCSS {
-  width: 50%;
+  width: 14.3%;
 }
 .logoReact {
   padding: 10px 10px 10px 10px;
-  width: 50%;
+  width: 14.3%;
 }
 .logoC {
-  width: 50%;
+  width: 14.3%;
   background-color: rgb(77, 77, 77);
 }
 .logoJava {
-  width: 50%;
+  width: 14.3%;
   background-color: rgb(77, 77, 77);
 }
 
@@ -71,14 +71,13 @@
 }
 
 .contenedorImagenesProy {
-  width: 900px;
-  height: 150px;
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
   background-color: rgb(0, 153, 153);
 }
 .dividirPartesIguales {
-  margin: 0px 30px;
+  margin: 10px 10px;
   flex: 1 1 ;
   color: rgb(0, 19, 27);
 }
@@ -102,7 +101,6 @@
 }
 
 .contenedorHerramientas{
-  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -111,25 +109,29 @@
 
 .contenedorImagenesHerr {
   display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgb(0, 160, 160);
 }
 .logoVisualCode {
-  height: 130px;
-  padding: 3px;
+  width: 20%;
+  padding: 8px;
   margin: 0px 5px 0px 5px;
 }
 .logoGitHub {
-  height: 130px;
-  padding: 4px;
+  width: 20%;
+  padding: 6px;
 }
 .logoGitHubDesk {
-  height: 130px;
+  width: 20%;
 }
 .logoAndroidStudio {
-  height: 130px;
+  width: 20%;
+  padding: 6px;
   background-color: rgb(77, 77, 77);
 }
 .logoUnity {
-  height: 130px;
+  width: 20%;
+  padding: 6px;
   background-color: rgb(77, 77, 77);
 }
