--- a/src/Css/CaraOSello.css
+++ b/src/Css/CaraOSello.css
@@ -3,15 +3,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
   height: 300px;
   background-color: rgb(83, 133, 133);
 }
 
 
 .contenedor-respuestas {
-  height: 100%;
-  width: 200px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -27,6 +25,16 @@ input {
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
+}
+.inputCaraOSello {
+  width: 90%;
+}
+.contenedor-imputs {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .contenedor-botones {
   width: 100%;
@@ -52,7 +60,6 @@ button {
 
 .contenedor-resultados {
   height: 100%;
-  width: 590px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -62,14 +69,12 @@ button {
 
 .contenedor-historial {
   height: 220px;
-  width: 159px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
 }
 .historial-resultados {
   padding: 4px 6px 4px 6px;
-  max-width: 150px;
+  width: 100%;
   height: 195px;
   color: rgb(141, 255, 255);
   background-color: rgb(0, 19, 27);
