--- a/src/Css/ListaDeGatos.css
+++ b/src/Css/ListaDeGatos.css
@@ -1,29 +1,29 @@
 /*----------------------- ESCOGER CLASE DEL GATO -------------------------*/
 .gato-rpg {
   width: 100%;
-  height: 400px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   background-color: rgb(62, 112, 112);
 }
 
 .contenedor-caracteristicas {
-  height: 300px;
-  width: 800px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   background-color: rgb(15, 66, 66);
   line-height: 50px;
 }
 
 .contenedor-lista {
   height: 250px;
-  width: 800px;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: rgb(102, 0, 0);
   border: 10px solid rgb(0, 65, 56);
   border-radius: 30px;
