--- a/src/Css/CaraOSello.css
+++ b/src/Css/CaraOSello.css
@@ -1,9 +1,9 @@
 /*---------------------- CARA O SELLO CON HISTORIAL ----------------------*/
 .cara-o-sello {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: 300px;
   background-color: rgb(83, 133, 133);
 }
 
@@ -37,7 +37,6 @@ input {
   align-items: center;
 }
 .contenedor-botones {
-  width: 100%;
   padding: 5px 5px 5px 5px;
   display: flex;
   justify-content: space-evenly;
@@ -59,7 +58,6 @@ button {
 
 
 .contenedor-resultados {
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
