--- a/src/Css/ListaChat.css
+++ b/src/Css/ListaChat.css
@@ -1,30 +1,27 @@
 /*--------------------- DOBLE INPUT CON CHAT(WSP) ------------------------*/
 .Chat {
   width: 100%;
-  height: 650px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-color: rgb(21, 61, 61);
 }
 
 .ContenedorChats {
-  width: 300px;
   height: 300px;
   background-color: rgb(40, 168, 168);
 }
 
 .RegistroChat {
-  width: 300px;
-  height: 500px;
-  background-color: rgb(53, 136, 136);
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(53, 136, 136);
 }
 .contenedorHistorial {
   width: 280px;
-  height: 480px;
+  min-height: 400px;
   background-color: aqua;
   overflow-y: scroll;
   border: 5px solid rgb(27, 77, 77);
