--- a/src/Css/TarjetaRND.css
+++ b/src/Css/TarjetaRND.css
@@ -3,16 +3,14 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
   background-color: rgb(29, 65, 65);
 }
 .imgTitulo {
-  height: 90px;
-  width: 90px;
+  display: flex;
+  padding: 10px;
 }
 .imgLogo {
-  height: 100%;
-  width: 100%;
+  height: 80px;
   border: 6px solid rgb(0, 247, 255);
   border-radius: 30px;
   -webkit-border-radius: 30px;
@@ -21,9 +19,6 @@
   -o-border-radius: 30px;
 }
 .titulo {
-  height: 80px;
-  width: 1700px;
-  margin: 0px 20px 0px 20px;
   background-color: green;
 }
 
