--- a/src/Css/PiedraPapelTijera.css
+++ b/src/Css/PiedraPapelTijera.css
@@ -1,16 +1,22 @@
 .cuerpo {
   height: 875px;
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
+.contContenedores {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(5, 43, 43);
+}
+
 
 .contenedorIzquierda {
-  height: 800px;
-  width: 561px;
+  height: 250px;
+  width: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,8 +24,7 @@
 }
 .divImagenIzq {
   text-align: center;
-  height: 600px;
-  width: 461px;
+  height: 100%;
 }
 
 .contenedorCentro {
@@ -27,12 +32,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgb(1, 16, 37);
 }
 
 
 .contVidasEnemigo {
   height: 37px;
-  width: 800px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,7 +46,7 @@
 }
 .contVidasPlayer {
   height: 37px;
-  width: 800px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,7 +60,7 @@
 /* PIEDRA PAPEL TIJERA 1 */
 .cont1 {
   height: 400px;
-  width: 800px;
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -104,7 +110,7 @@
 /* PIEDRA PAPEL TIJERA 3 */
 .cont3 {
   height: 400px;
-  width: 800px;
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -137,8 +143,8 @@
 
 
 .contenedorDerecha {
-  height: 800px;
-  width: 561px;
+  height: 250px;
+  width: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -146,8 +152,7 @@
 }
 .divImagenDer {
   text-align: center;
-  height: 600px;
-  width: 461px;
+  height: 100%;
 }
 
 /* RND RND RND RND RND RND RND RND RND RND RND*/
