--- a/src/Css/DiferentesAnim.css
+++ b/src/Css/DiferentesAnim.css
@@ -26,13 +26,14 @@
   height: 60px;
   margin: 6px 4px 6px 4px;
   padding: 3px 6px 3px 6px;
-  color: rgb(141, 255, 255);
-  background-color: rgb(0, 19, 27);
-  border: 3px solid rgb(141, 255, 255);
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
+  color: rgb(141, 255, 255) !important;
+  background-color: rgb(0, 19, 27) !important;
+  border: 3px solid rgb(141, 255, 255) !important;
+  border-radius: 8px !important;
+  -webkit-border-radius: 8px !important;
+  -moz-border-radius: 8px !important;
+  -ms-border-radius: 8px !important;
+  -o-border-radius: 8px !important;
   cursor: pointer;
+  text-transform: none !important;
 }
