--- a/src/Css/DiferentesAnim.css
+++ b/src/Css/DiferentesAnim.css
@@ -32,6 +32,20 @@
 .tamañoLi {
   font-size: 15px;
 }
+.estiloSelect {
+  padding: 3px 6px 3px 6px;
+  color: rgb(141, 255, 255);
+  background-color: rgb(0, 19, 27);
+  border: 3px solid rgb(141, 255, 255);
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+.estiloLabel {
+  font-weight: bold;
+}
 
 .tituloAlerVanilla {
   text-align: center;
@@ -101,7 +115,7 @@
   background-color: rgb(25, 160, 160);
 }
 
-.AlertaAnimVanilla {
+.alertaAnimVanilla {
   height: 50px;
   width: 300px;
   display: flex;
@@ -129,7 +143,28 @@
   100% {left: -300px; top: 0px;}
 }
 
+/* CENTRO CENTRO CENTRO CENTRO CENTRO CENTRO */
 
+.contCentro {
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(15, 99, 99);
+}
+
+.testC {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: aqua;
+}
+
+.miniContenedor {
+  display: flex;
+  flex-direction: column;
+  color: rgb(0, 56, 56);
+}
 
 /* DERECHA DERECHA DERECHA DERECHA DERECHA */
 
