--- a/src/Css/DiferentesAnim.css
+++ b/src/Css/DiferentesAnim.css
@@ -49,16 +49,15 @@
 
 .tituloAlerVanilla {
   text-align: center;
-  background-color: rgb(20, 70, 70);
+  background-color: rgb(22, 36, 36);
 }
 
 .tituloAlerMUI {
   text-align: center;
-  background-color: rgb(63, 97, 97);
+  background-color: rgb(12, 63, 63);
 }
 
 .cuerpoAnim {
-  height: 700px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -69,17 +68,25 @@
 
 .contContCont {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
 
 .contBtnDifAnim {
-  height: 100%;
+  margin: 5px;
+  padding: 5px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-color: rgb(15, 99, 99);
+  border: 6px solid rgb(0, 255, 255);
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 
 .contAnimIzq {
@@ -143,6 +150,7 @@
 
 .contAnimCen {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   background-color: rgb(46, 107, 107);
 }
@@ -198,7 +206,6 @@
   height: 100%;
 }
 
-
 .contenedorBtnForm {
   display: flex;
   justify-content: center;
@@ -207,6 +214,10 @@
 .contenedorReq {
   display: flex;
   flex-direction: column;
+}
+.colorTxtReq {
+  color: rgb(0, 43, 43);
+  font-weight: bold !important;
 }
 
 /* DERECHA DERECHA DERECHA DERECHA DERECHA */
