--- a/src/Css/ListaChat.css
+++ b/src/Css/ListaChat.css
@@ -1,30 +1,33 @@
 /*--------------------- DOBLE INPUT CON CHAT(WSP) ------------------------*/
 .Chat {
+  margin-top: 10px;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-color: rgb(21, 61, 61);
+  border-top: 10px solid red;
+  border-left: 10px double red;
+  border-right: 10px double red;
+  border-bottom: 10px solid red;
 }
 
 .ContenedorChats {
   height: 300px;
-  background-color: rgb(40, 168, 168);
 }
 
 .RegistroChat {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(53, 136, 136);
 }
 .contenedorHistorial {
   width: 280px;
   min-height: 400px;
-  background-color: aqua;
+  background-color: rgb(34, 90, 90);
   overflow-y: scroll;
-  border: 5px solid rgb(27, 77, 77);
+  border: 6px double rgb(4, 39, 39);
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
