--- a/src/Css/TextoColRND.css
+++ b/src/Css/TextoColRND.css
@@ -5,7 +5,13 @@
   justify-content: space-evenly;
   flex-direction: column;
   height: 300px;
-  background-color: rgb(110, 160, 160);
+  background-color: rgb(0, 70, 70);
+  border: 5px solid red;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 
 .texto {
@@ -13,7 +19,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(84, 126, 126);
   /*GROSOR DEL TEXTO*/
   font-weight: 400;
   /*SEPARACION ENTRE LINEAS*/
