--- a/src/Css/Gato.css
+++ b/src/Css/Gato.css
@@ -40,8 +40,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  background-color: rgb(51, 151, 151);
+  align-items: flex-end;
+  border-top: 5px double red;
+  border-left: 5px double red;
+  border-bottom: 5px double red;
 }
 
 .contenedor-DatosGato {
@@ -50,7 +52,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  background-color: rgb(52, 78, 78);
+  border-top: 5px double red;
+  border-right: 5px double red;
+  border-bottom: 5px double red;
 }
 
 .contenedor-VidaHabilidadesGato {
@@ -59,5 +63,4 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(22, 48, 48);
 }
