--- a/src/Css/PiedraPapelTijera.css
+++ b/src/Css/PiedraPapelTijera.css
@@ -5,7 +5,7 @@
   align-items: center;
 }
 .cuerpoAlturaGrande {
-  height: 875px;
+  height: 925px;
 }
 .cuerpoAlturaChico {
   height: 560px;
@@ -15,7 +15,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(5, 43, 43);
 }
 
 
@@ -25,11 +24,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(34, 49, 49);
 }
 .divImagenIzq {
   text-align: center;
   height: 100%;
+}
+.eleccionCotn1Chiquito {
+  height: 170px !important;
 }
 
 .contenedorCentro {
@@ -37,25 +38,40 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(1, 16, 37);
 }
 
 
 .contVidasEnemigo {
   height: 37px;
-  width: 100%;
+  width: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(92, 0, 0);
+  border-top: 5px ridge aqua;
+  border-left: 5px ridge aqua;
+  border-right: 5px ridge aqua;
+  border-radius: 10px 10px 0px 0px;
+  -webkit-border-radius: 10px 10px 0px 0px;
+  -moz-border-radius: 10px 10px 0px 0px;
+  -ms-border-radius: 10px 10px 0px 0px;
+  -o-border-radius: 10px 10px 0px 0px;
 }
 .contVidasPlayer {
   height: 37px;
-  width: 100%;
+  width: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(46, 119, 107);
+  background-color: rgb(92, 0, 0);
+  border-left: 5px ridge aqua;
+  border-right: 5px ridge aqua;
+  border-bottom: 5px ridge aqua;
+  border-radius: 0px 0px 10px 10px;
+  -webkit-border-radius: 0px 0px 10px 10px;
+  -moz-border-radius: 0px 0px 10px 10px;
+  -ms-border-radius: 0px 0px 10px 10px;
+  -o-border-radius: 0px 0px 10px 10px;
 }
 .tamañoVidas{
   height: 100%;
@@ -69,6 +85,14 @@
   justify-content: space-evenly;
   align-items: center;
   background-color: rgb(3, 97, 97);
+  border-top: 5px ridge aqua;
+  border-left: 5px ridge aqua;
+  border-right: 5px ridge aqua;
+  border-radius: 30px 30px 0px 0px;
+  -webkit-border-radius: 30px 30px 0px 0px;
+  -moz-border-radius: 30px 30px 0px 0px;
+  -ms-border-radius: 30px 30px 0px 0px;
+  -o-border-radius: 30px 30px 0px 0px;
 }
 .cont1AlturaGrande {
   height: 400px;
@@ -82,7 +106,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(93, 117, 117);
+  border: 5px double red;
 }
 .piedra1 {
   height: 250px;
@@ -90,7 +114,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(13, 148, 148);
+  border: 5px double red;
 }
 .papel1 {
   height: 250px;
@@ -98,7 +122,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(43, 90, 90);
+  border: 5px double red;
 }
 .tijera1 {
   height: 250px;
@@ -106,7 +130,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(3, 46, 46);
+  border: 5px double red;
 }
 
 /* PIEDRA PAPEL TIJERA 2 */
@@ -124,6 +148,14 @@
   justify-content: space-evenly;
   align-items: center;
   background-color: rgb(4, 66, 66);
+  border-radius: 0px 0px 30px 30px;
+  border-left: 5px ridge aqua;
+  border-right: 5px ridge aqua;
+  border-bottom: 5px ridge aqua;
+  -webkit-border-radius: 0px 0px 30px 30px;
+  -moz-border-radius: 0px 0px 30px 30px;
+  -ms-border-radius: 0px 0px 30px 30px;
+  -o-border-radius: 0px 0px 30px 30px;
 }
 .cont3AlturaGrande {
   height: 400px;
@@ -156,6 +188,10 @@
   background-color: rgb(3, 46, 46);
 }
 
+.piePapTij2Chiquito {
+  height: 150px;
+}
+
 
 .contenedorDerecha {
   height: 250px;
@@ -163,7 +199,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(13, 43, 43);
 }
 .divImagenDer {
   text-align: center;
@@ -177,7 +212,7 @@
 }
 
 .tamañoIMG {
-  height: 100%;
+  height: 86%;
   width: 100%;
 }
 
@@ -195,7 +230,7 @@
   height: 800px;
 }
 .alertaGanarChico {
-  height: 462px;
+  height: 472px;
 }
 .tamañoImgAlertaGanaste {
   height: 300px;
@@ -214,7 +249,7 @@
   height: 800px;
 }
 .alertaPerderChico {
-  height: 462px;
+  height: 472px;
 }
 .tamañoImgAlertaPerdiste {
   height: 300px;
