--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: Cascadia Code;
+  font-family: 'Cascadia Code', sans-serif;
 }
 
 body {
