--- a/src/Css/Inicio.css
+++ b/src/Css/Inicio.css
@@ -29,33 +29,35 @@
 
 .contenedorImagenesHab {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-color: rgb(0, 160, 160);
+  border: 5px double red;
 }
 .logoBootstrap {
   padding: 10px 10px 10px 10px;
-  width: 14.3%;
+  width: 25%;
 }
 .logoHTML{
-  width: 14.3%;
+  width: 25%;
 }
 .logoJS {
-  width: 14.3%;
+  width: 25%;
 }
 .logoCSS {
-  width: 14.3%;
+  width: 25%;
 }
+
 .logoReact {
-  padding: 10px 10px 10px 10px;
-  width: 14.3%;
+  width: 30%;
 }
 .logoC {
-  width: 14.3%;
+  width: 35%;
   background-color: rgb(77, 77, 77);
 }
 .logoJava {
-  width: 14.3%;
+  width: 35%;
   background-color: rgb(77, 77, 77);
 }
 
@@ -119,29 +121,32 @@
 
 .contenedorImagenesHerr {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-color: rgb(0, 160, 160);
+  border: 5px double red;
 }
 .logoVisualCode {
-  width: 20%;
+  width: 30%;
   padding: 8px;
   margin: 0px 5px 0px 5px;
 }
 .logoGitHub {
-  width: 20%;
+  width: 32%;
   padding: 6px;
 }
 .logoGitHubDesk {
-  width: 20%;
+  width: 32%;
 }
+
 .logoAndroidStudio {
-  width: 20%;
+  width: 50%;
   padding: 6px;
   background-color: rgb(77, 77, 77);
 }
 .logoUnity {
-  width: 20%;
+  width: 50%;
   padding: 6px;
   background-color: rgb(77, 77, 77);
 }
