--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/cascadia-code');
 body {
   margin: 0;
-  font-family: 'Cascadia Code';
+  font-family: 'Cascadia Code', sans-serif;
 }
