--- a/src/Css/DiferentesAnim.css
+++ b/src/Css/DiferentesAnim.css
@@ -7,19 +7,60 @@
 }
 .estiloBtnDifAnim {
   height: 60px;
-  margin: 6px 4px 6px 4px !important;
-  padding: 3px 6px 3px 6px !important;
+  padding: 0px !important;
+  margin: 0px !important;
   color: rgb(141, 255, 255) !important;
   background-color: rgb(0, 19, 27) !important;
+  box-shadow: 0px 0px 10px aqua;
   border: 3px solid rgb(141, 255, 255) !important;
   border-radius: 8px !important;
   -webkit-border-radius: 8px !important;
   -moz-border-radius: 8px !important;
   -ms-border-radius: 8px !important;
   -o-border-radius: 8px !important;
+  overflow-x: hidden;
   cursor: pointer;
   text-transform: none !important;
+  position: relative;
+
 }
+.contBtn {
+  height: 63px;
+  margin: 6px 4px 6px 4px !important;
+}
+.conTxtBtn {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contAnimBtn1 {
+  position: relative;
+  left: -75px;
+}
+.animBtn1 {
+  height: 30px;
+  width: 250px;
+  background-color: aqua;
+  filter: blur(5px);
+  animation-name: Btn1anim;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  -webkit-filter: blur(5px);
+}
+@keyframes Btn1anim{
+  0% { }
+  100% {
+    background-color: red !important;
+    transform: rotateZ(100deg) translate(1em, -12em);
+    -webkit-transform: rotateZ(100deg) translate(1em, -12em);
+    -moz-transform: rotateZ(100deg) translate(1em, -12em);
+    -ms-transform: rotateZ(100deg) translate(1em, -12em);
+    -o-transform: rotateZ(100deg) translate(1em, -12em);
+}
+}
+
 .estiloBtnDifAnimCorr {
   border: 3px solid rgb(32, 255, 0) !important;
 }
