--- a/src/Css/DiferentesAnim.css
+++ b/src/Css/DiferentesAnim.css
@@ -22,7 +22,6 @@
   cursor: pointer;
   text-transform: none !important;
   position: relative;
-
 }
 .contBtn {
   height: 63px;
@@ -35,6 +34,10 @@
   justify-content: center;
   align-items: center;
 }
+.conTxtBtn label {
+  cursor: pointer;
+}
+
 .contAnimBtn1 {
   height: 100%;
   position: relative;
@@ -46,12 +49,12 @@
   width: 100%;
   background-color: aqua;
   filter: blur(5px);
-  animation-name: Btn1anim;
+  animation-name: Btn1Anim;
   animation-duration: 1s;
   animation-iteration-count: 1;
   -webkit-filter: blur(5px);
 }
-@keyframes Btn1anim{
+@keyframes Btn1Anim{
   0% {  }
   100% {
     background-color: red !important;
@@ -60,6 +63,102 @@
     -moz-transform: rotateZ(140deg) translate(4.5em, -17em);
     -ms-transform: rotateZ(140deg) translate(4.5em, -17em);
     -o-transform: rotateZ(140deg) translate(4.5em, -17em);
+  }
+}
+
+.animBtn2 {
+  animation-name: Btn2Anim;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+}
+@keyframes Btn2Anim {
+  50% {
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+  }
+}
+
+.animBtn3Correcto {
+  animation-name: Btn3AnimCorr;
+  animation-duration: 0.3s;
+  animation-iteration-count: 3;
+}
+@keyframes Btn3AnimCorr {
+  50% {
+    box-shadow: 0 0 20px rgb(0, 255, 170);
+  }
+}
+.animBtn3Incorrecto {
+  animation-name: Btn3AnimIncorr;
+  animation-duration: 0.3s;
+  animation-iteration-count: 3;
+}
+@keyframes Btn3AnimIncorr {
+  50% {
+    box-shadow: 0 0 20px red;
+  }
+}
+
+.animBtn4 {
+  animation-name: Btn4Anim;
+  animation-duration: 2s;
+}
+@keyframes Btn4Anim {
+  33.3% {
+    filter: blur(10px);
+    -webkit-filter: blur(10px);
+    transform: skew(30deg);
+    -webkit-transform: skew(30deg);
+    -moz-transform: skew(30deg);
+    -ms-transform: skew(30deg);
+    -o-transform: skew(30deg);
+  }
+  66.6% {
+    filter: blur(10px);
+    -webkit-filter: blur(10px);
+    transform: skew(-30deg);
+    -webkit-transform: skew(-30deg);
+    -moz-transform: skew(-30deg);
+    -ms-transform: skew(-30deg);
+    -o-transform: skew(-30deg);
+  }
+}
+
+.animBtn5 {
+  animation-name: Btn5Anim;
+  animation-duration: 1s;
+}
+@keyframes Btn5Anim {
+  10% {
+    transform: rotateX(90deg);
+    -webkit-transform: rotateX(90deg);
+    -moz-transform: rotateX(90deg);
+    -ms-transform: rotateX(90deg);
+    -o-transform: rotateX(90deg);
+  }
+  80% {
+    transform: rotateX(90deg);
+    -webkit-transform: rotateX(90deg);
+    -moz-transform: rotateX(90deg);
+    -ms-transform: rotateX(90deg);
+    -o-transform: rotateX(90deg);
+  }
+  100% {
+    transform: rotateX(0deg);
+    -webkit-transform: rotateX(0deg);
+    -moz-transform: rotateX(0deg);
+    -ms-transform: rotateX(0deg);
+    -o-transform: rotateX(0deg);
 }
 }
 
