--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 
 .contenedor-cuerpo {
   width: 100%;
-  min-height: 500px;
+  min-height: 95vh;
   margin: 0px;
   padding: 0px;
   background-color: rgb(0, 33, 49);
