Inicio: Agregado descripcion de los proyectos - Cambios menores en varios apartados

--- a/src/Css/DiferentesAnim.css
+++ b/src/Css/DiferentesAnim.css
@@ -1,3 +1,4 @@
+
 .contContBotones {
   display: flex;
   justify-content: center;
@@ -211,11 +212,12 @@
 
 .cuerpoAnim {
   width: 100%;
+  min-height: 980px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(73, 121, 121);
+  background-color: rgb(5, 66, 66);
 }
 
 .contContCont {
