--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/cascadia-code');
 body {
   margin: 0;
+  color: wheat;
+  background-color: rgb(0, 10, 15);
   font-family: 'Cascadia Code', sans-serif;
 }
