--- a/src/Css/BarraNav.css
+++ b/src/Css/BarraNav.css
@@ -20,21 +20,19 @@ a {
 .contBotonesFix {
   min-width: 0 !important;
   background: transparent;
+  border: 5px solid aqua;
 }
 .botonDesplegable {
-  height: 40px;
+  height: 50px;
   width: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: rgb(141, 255, 255);
   background-color: rgb(0, 17, 17);
-  border: 3px solid rgb(1, 255, 255);
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
+}
+.botonDesplegable:hover {
+  background-color: rgb(0, 31, 31);
 }
 .padding0 {
   padding: 0px !important;
@@ -69,6 +67,22 @@ a {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+}
+.btnGitHubNav {
+  cursor: pointer;
+}
+.btnGitHubNav img {
+  cursor: pointer;
+}
+.gitHubNav {
+  height: 40px;
+  width: 40px;
+  background-color: rgb(109, 109, 109);
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
 }
 
 .BotonCambioPag {
