--- a/src/Css/ListaGatoAPI.css
+++ b/src/Css/ListaGatoAPI.css
@@ -19,7 +19,7 @@
 }
 
 .contenedor-imagenes {
-  padding: 10px;
+  padding: 10px 0px 10px 0px;
   height: 500px;
   display: flex;
   justify-content: flex-start;
