--- a/src/Css/Inicio.css
+++ b/src/Css/Inicio.css
@@ -35,8 +35,12 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  background-color: rgb(0, 160, 160);
+  background-image: linear-gradient(90deg, #5cd7ab 44%, #1f7fff 90%);
   border: 5px double red;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 40px;
 }
 .logoBootstrap {
   padding: 10px 10px 10px 10px;
@@ -53,6 +57,7 @@
 }
 .logoReact {
   width: 20%;
+  border-bottom-right-radius: 34px;
 }
 /* PROYECTOS PROYECTOS PROYECTOS PROYECTOS PROYECTOS PROYECTOS PROYECTOS PROYECTOS PROYECTOS PROYECTOS PROYECTOS */
 
@@ -77,11 +82,10 @@
   align-items: center;
   background-color: rgb(3, 26, 26);
   border: 10px double red;
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 40px;
 }
 .dividirPartesIguales {
   display: flex;
@@ -190,8 +194,12 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  background-color: rgb(0, 160, 160);
+  background-image: linear-gradient(90deg, #5cd7ab 44%, #1f7fff 90%);
   border: 5px double red;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 40px;
 }
 .logoVisualCode {
   width: 30%;
