--- a/src/Css/BarraNav.css
+++ b/src/Css/BarraNav.css
@@ -91,6 +91,7 @@ a {
 }
 @keyframes GitHubNavANIM1 {
   100% {
+    box-shadow: 0px 0px 15px white;
     background-color: rgb(255, 255, 255);
   }
 }
@@ -101,9 +102,11 @@ a {
 @keyframes GitHubNavANIM2 {
   0% {
     background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 15px white;
   }
   100% {
     background-color: rgb(109, 109, 109);
+    box-shadow: 0px 0px 0px white;
   }
 }
 
