--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.contenedor-cuerpo {
+  width: 100%;
+  min-height: 95vh;
+  margin: 0px;
+  padding: 0px;
+  background-color: rgb(0, 33, 49);
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.footer-app {
+  height: 140px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   align-items: center;
+  color: rgb(0, 54, 54);
+  background-color: rgb(0, 124, 124);
+}
+.contFoot {
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  color: rgb(0, 54, 54);
+  background-color: rgb(0, 124, 124);
+}
+.miniContFoot {
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  font-size: 20px;
 }
