--- a/frontend/src/Css/ExperimentoConBD.css
+++ b/frontend/src/Css/ExperimentoConBD.css
@@ -3,6 +3,44 @@
   flex-wrap: wrap;
 }
 
+.contAlertaBD{
+  width: 200px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background-color: rgb(0, 57, 61);
+  border: 5px solid rgb(0, 83, 131);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  left: -220px;
+}
+.alertaBien{
+  background-color: rgb(0, 110, 50) !important;
+  border: 5px solid rgb(0, 61, 36) !important;
+  box-shadow: 0px 0px 20px rgb(0, 110, 50) !important;
+}
+.alertaMal{
+  background-color: red !important;
+  border: 5px solid rgb(39, 7, 7) !important;
+  box-shadow: 0px 0px 20px red !important;
+}
+.animAlertaBD{
+  animation-name: test1;
+  animation-duration: 2s;
+}
+@keyframes test1 {
+  50%{ left: 0px; opacity: 100%;}
+  100%{
+    left: 0px;
+    opacity: 0%;
+  }
+}
+
 .contFormBD {
   margin: 50px 0px 50px 0px;
   height: 500px;
@@ -15,13 +53,14 @@
   text-align: center;
 }
 .estiloFormBD {
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px; 
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-image: linear-gradient( 180deg, rgb(0, 160, 172) 20%, rgb(0, 38, 49) 70%);
+  box-shadow: 0px 0px 15px aqua;
   box-sizing: border-box;
   border: 5px solid aqua;
   border-bottom-left-radius: 20px;
@@ -39,7 +78,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   text-align: center;
 }
 .textareaFormBD {
@@ -56,11 +95,86 @@
   -o-border-radius: 8px;
   resize: none;
 }
+.lleno {
+  border: 5px solid green;
+  box-shadow: 0px 0px 20px green;
+}
+.vacio {
+  border: 5px solid red;
+  box-shadow: 0px 0px 20px red;
+}
 
 .contBasesDeDatos {
+  padding: 0px 20px 0px 20px;
   height: 450px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-image: linear-gradient(90deg, red 10%, aqua 90%);
+}
+
+.tablaEstilo {
+  height: 350px;
+  padding: 10px 10px 0px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(0, 100, 149);
+  overflow-y: scroll;
+}
+
+.contUser {
+  margin: 0px 0px 10px 0px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(0deg, rgb(0, 77, 77) 1%, rgb(0, 19, 19) 30%);
+  border: 4px solid rgb(0, 41, 37);
+}
+.eliminarUser {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.miniContUser2 {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contArchivo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.imgTamaño{
+  height: 170px;
+  width: 170px;
+}
+
+.editForm {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;  
+}
+.contInputEdit {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.txTareaFormEditMDB {
+  padding: 3px 6px 3px 6px;
+  color: rgb(141, 255, 255);
+  background-color: rgb(0, 19, 27);
+  border: 3px solid rgb(141, 255, 255);
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  resize: none;
 }
